<resources>
    <string name="app_name">Fcitx5-SyncClipboard</string>
    <string name="plugin_description">与 SyncClipboard 服务器同步剪贴板</string>
    
    <!-- Settings -->
    <string name="settings_title">设置</string>
    <string name="server_address">服务器地址</string>
    <string name="server_address_summary">例如 http://192.168.1.100:5000/clipboard</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="sync_interval">同步间隔（秒）</string>
    <string name="test_connection">测试连接</string>
    <string name="connection_success">连接成功</string>
    <string name="connection_failed">连接失败</string>
    <string name="testing_connection">正在测试连接...</string>
    
    <string name="quick_sync">开启同步</string>
    <string name="quick_sync_summary">关闭后将停止所有同步服务</string>
    <string name="please_set_server_address">请先设置服务器地址</string>
    <string name="connecting_to">正在连接到 %s...</string>
    <string name="unknown_error">未知错误</string>
    
    <string name="download_path">下载目录</string>
    <string name="download_path_summary">点击选择文件下载保存位置</string>
    <string name="download_path_not_set">未设置</string>
    <string name="clicktest">点击测试服务器可用性</string>
    
    <string name="quick_sync_tile_label">剪贴板同步</string>
</resources>
